# mongoBrain

./: .gitignore  README.md  SKILL.md  pyproject.toml
references/: schemas.md
scripts/: memory_ops.py  setup_db.py
skills/: README.md  k8s-cluster-setup.json  landing-page-creation.json  skill-builder.json
src/: agent_config.py  connection.py  guidelines.py  maintenance.py  memories.py  migrate.py  seeds.py  skills.py
tests/: docker-compose.yml  test_all.py
tests/fixtures/: k8s-cluster-setup.json  landing-page-creation.json
